<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
                name="viewModel"
                type="com.ascstb.whatpeoplesearch.presentation.categories.CategorySelectionViewModel"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  tools:context=".presentation.categories.CategorySelectionView">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Title"
                android:gravity="center"
                android:text="@string/select_the_category_label"/>

        <Button
                android:id="@+id/btnCulture"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CategoryButton"
                android:text="@string/culture_button"/>

        <Button
                android:id="@+id/btnPeople"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CategoryButton"
                android:text="@string/people_button"/>

        <Button
                android:id="@+id/btnNames"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CategoryButton"
                android:text="@string/names_button"/>

        <Button
                android:id="@+id/btnQuestions"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CategoryButton"
                android:text="@string/questions_button"/>

    </LinearLayout>
</layout>